# gastrack

./: .gitignore  README.md  build_shiv.py  gastrack.db  main.py  pyproject.toml
build-scripts/: setup_db.sh  setup_flows.sh  setup_flows_no_comments.sh  setup_flows_simple.sh  setup_python.sh  setup_svelte.sh  setup_test.sh
docs/: CHANGELOG.md
frontend/: package-lock.json
frontend/src/: App.svelte
node-red/: .config.nodes.json  .config.runtime.json  .config.runtime.json.backup  package-lock.json  package.json
node-red/full-dashboard/: flows.json  settings.js
node-red/simple/: .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  flows.json  settings.js
src/: cli.py  main.py
src/gastrack/api/: handlers.py
src/gastrack/core/: database.py  environment.py  models.py  server.py
src/gastrack/db/: connection.py  crud.py  init_schema.sql
tests/: conftest.py  test_api_factors.py
