[project]
name = "gastrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Standard Dependencies (PEP 621)
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

# Development Dependencies (PEP 621 Optional Dependencies)
[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]


[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells setuptools to find packages inside the 'src' directory
where = ["src"]

# Pytest Configuration (required for path resolution)
[tool.pytest.ini_options]
pythonpath = [
    "src",
]
# Add this line to tell pytest-asyncio to enable the event loop 
# for the session-scoped async fixtures
asyncio_mode = "auto"
