[project]
name = "gastrack"
version = "0.1.1"
description = "Out with biogasCalcsV2.xlsx, in with gastrack.pyz."
authors = ["George Clayton Bennett <george.bennett@memphistn.gov>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "gastrack", from = "src" }] # Enables `import gastrack`
homepage = "https://github.com/city-of-memphis-wastewater/gastrack"
repository = "https://github.com/city-of-memphis-wastewater/gastrack"
  
# Standard Dependencies (PEP 621)
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "starlette>=0.50.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

# Development Dependencies (PEP 621 Optional Dependencies)
[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: Console",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells setuptools to find packages inside the 'src' directory
where = ["src"]

# Pytest Configuration (required for path resolution)
[tool.pytest.ini_options]
pythonpath = [
    "src",
]
# Add this line to tell pytest-asyncio to enable the event loop 
# for the session-scoped async fixtures
asyncio_mode = "auto"
