[project]
name = "gastrack"
version = "0.1.2"
description = "Out with biogasCalcsV2.xlsx, in with gastrack.pyz."
authors = [
    {name = "George Clayton Bennett", email = "george.bennett@memphistn.gov"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "gastrack", from = "src" }] # Enables `import gastrack`
homepage = "https://github.com/city-of-memphis-wastewater/gastrack"
repository = "https://github.com/city-of-memphis-wastewater/gastrack"
  
# Standard Dependencies (PEP 621)
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "starlette>=0.50.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]


classifiers=[
    # Development Status
    "Development Status :: 3 - Alpha", # Assuming active development
    
    # Environment and Audience
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: End Users/Business", # Operations/Management
    "Intended Audience :: Field Engineers",    # Field Tech/Field Research
    
    # Deployment/Operating Systems
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android", # Covers Termux/Mobile Field Use
    
    # Licensing
    "License :: OSI Approved :: MIT License",
    
    # Programming Languages (Backend & Frontend Stack)
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: TypeScript",
    "Programming Language :: Rust",
    "Programming Language :: HTML :: 5",
    
    # Specific Topics (Covers Scientific, IoT, Networking, Monitoring)
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics", # Biology/Biogas
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking", # Field LAN/Router Interfacing
    "Topic :: System :: Hardware",   # Sensor Installation/IoT
    "Topic :: Internet :: WWW/HTTP :: WSGI", # Closest standard classifier for ASGI/Starlette
    "Topic :: Software Development :: Troubleshooting",
]
# other: Raspberry Pi, Node-Red, Node.js, JupyterLab for local dev on Termux, fast PYZ local app rollout via shiv

# Development Dependencies (PEP 621 Optional Dependencies)
[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]


[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells setuptools to find packages inside the 'src' directory
where = ["src"]

# Pytest Configuration (required for path resolution)
[tool.pytest.ini_options]
pythonpath = [
    "src",
]
# Add this line to tell pytest-asyncio to enable the event loop 
# for the session-scoped async fixtures
asyncio_mode = "auto"
